@@ -31,6 +31,8 @@ software-center (3.1.2) UNRELEASED; urgency=low
     - _update_minimal must update title in order to enable source based on
       app-install-data info, but then realise that the pkg isn't available
       due to outdated app-install-data info (4pkgs for maverick final)
+  * clean up some 'is it available for our architecture' code that is not
+    needed anymore (idealy we don't need the info in the db either)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 19 Nov 2010 09:14:40 +0100
 
